--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     referrerpolicy="no-referrer" />
   <link rel="icon"
     type="image/x-icon"
-    href="./assets/10027.png">
+    href="./assets/10027.png" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -38,21 +38,30 @@
           alt="logo" />
         <div class="navitems hidden ml-10 lg:block">
           <ul class="flex gap-10 font-semibold text-lg lg:text-1xl">
-            <li class="flex items-center ">Start<i class="fa-solid fa-angle-down ml-2"></i></li>
-            <li class="flex items-center ">Sell<i class="fa-solid fa-angle-down ml-2"></i></li>
-            <li class="flex items-center ">Market<i class="fa-solid fa-angle-down ml-2"></i></li>
-            <li class="flex items-center ">Manage<i class="fa-solid fa-angle-down ml-2"></i></li>
+            <li class="flex items-center">
+              Start<i class="fa-solid fa-angle-down ml-2"></i>
+            </li>
+            <li class="flex items-center">
+              Sell<i class="fa-solid fa-angle-down ml-2"></i>
+            </li>
+            <li class="flex items-center">
+              Market<i class="fa-solid fa-angle-down ml-2"></i>
+            </li>
+            <li class="flex items-center">
+              Manage<i class="fa-solid fa-angle-down ml-2"></i>
+            </li>
           </ul>
         </div>
       </div>
 
       <div class="hamburger flex items-center">
-        <h2 class="mr-6 text-lg lg:text-1xl font-semibold hidden lg:block  items-center ">Pricing <i
-            class="fa-solid fa-angle-down ml-2"></i></h2>
+        <h2 class="mr-6 text-lg lg:text-1xl font-semibold hidden lg:block items-center">
+          Pricing <i class="fa-solid fa-angle-down ml-2"></i>
+        </h2>
         <h2 class="mr-6 text-lg lg:text-1xl font-semibold hidden lg:block items-center">
           Learn <i class="fa-solid fa-angle-down ml-2"></i>
         </h2>
-        <h2 class="mr-6 text-lg lg:text-1xl font-semibold  lg:block">
+        <h2 class="mr-6 text-lg lg:text-1xl font-semibold lg:block">
           Log in
         </h2>
         <div>
@@ -204,7 +213,9 @@
       </div>
     </div>
   </div>
-  <!-- SECTION-5  -->
+  <!-- /* ------------------------------ */
+/* ---------- SECTION-3 ------------ */
+/* ------------------------------ */ -->
   <div class="bg-[#ffffff] py-5 lg:px-20">
     <div class="withyou p-4 text-center">
       <h1 class="text-3xl lg:text-6xl font-bold">
@@ -239,7 +250,9 @@
       </div>
     </div>
 
-    <!-- section 7 -->
+    <!-- /* ------------------------------ */
+/* ---------- SECTION-4 ------------ */
+/* ------------------------------ */ -->
 
     <div class="lg:flex lg:flex-row lg:items-center p-10 lg:justify-between">
       <div class="sell-everywhere p-4 mt-5">
@@ -260,7 +273,9 @@
       </div>
     </div>
 
-    <!-- section-8    -->
+    <!-- /* ------------------------------ */
+/* ---------- SECTION-5 ------------ */
+/* ------------------------------ */ -->
 
     <div class="lg:flex lg:flex-row-reverse lg:items-center p-10 lg:justify-between">
       <div class="sell-everywhere p-4 mt-5">
@@ -282,7 +297,9 @@
     </div>
   </div>
 
-  <!-- section-9  -->
+  <!-- /* ------------------------------ */
+/* ---------- SECTION-6 ------------ */
+/* ------------------------------ */ -->
   <div class="bg-[#f3fcf4] py-20 lg:px-20">
     <h1 class="text-3xl m-10 font-semi-bold">
       Explore more from Shopify in India
@@ -314,7 +331,9 @@
     </div>
   </div>
 
-  <!-- section10  -->
+  <!-- /* ------------------------------ */
+/* ---------- SECTION-7 ------------ */
+/* ------------------------------ */ -->
   <div class="bg-[#ffffff] p-10 mt-5 lg:py-20 lg:px-28">
     <div class="empowering">
       <h1 class="text-xl lg:text-3xl font-semibold">
@@ -339,7 +358,9 @@
         alt="globe"
         class="hidden lg:block lg:w-[900px] lg:m-auto" />
     </div>
-
+    <!-- /* ------------------------------ */
+/* ---------- GIRL AND BRANDS ------------ */
+/* ------------------------------ */ -->
     <div class="girl lg:flex mt-24">
       <div class="girl-img">
         <img src="./assets/10019.jpg"
@@ -361,7 +382,9 @@
       </div>
     </div>
   </div>
-
+  <!-- /* ------------------------------ */
+/* ---------- BRANDS ------------ */
+/* ------------------------------ */ -->
   <div class="brand-names lg:px-28 flex flex-wrap justify-between items-center">
     <div class="w-28"><img src="./assets/bajaao.png"
         alt="" /></div>
@@ -379,9 +402,11 @@
         alt="" /></div>
   </div>
 
-  <!-- Second LAST  -->
+  <!-- /* ------------------------------ */
+/* ---------- SECTION-8 ------------ */
+/* ------------------------------ */ -->
   <div class="lg:flex lg:justify-between mt-20">
-    <div class="help-you-need bg-[#fbf7ed] p-10 py-20  lg:p-0  lg:px-20">
+    <div class="help-you-need bg-[#fbf7ed] p-10 py-20 lg:p-0 lg:px-20">
       <h1 class="text-3xl font-semibold">
         Get the help you need, every step of the way
       </h1>
@@ -452,7 +477,9 @@
       </div>
     </div>
   </div>
-
+  <!-- /* ------------------------------ */
+/* ---------- FOOOTER ------------ */
+/* ------------------------------ */ -->
   <div class="footer bg-[#004c3f] py-10 lg:px-20 mt-20">
     <div class="footernav">
       <ul class="flex flex-wrap text-sm font-bold p-4 text-white lg:text-1xl gap-5">
@@ -586,5 +613,8 @@
     </div>
   </div>
 </body>
+<div class="bg-[#fffff]">
+  <p class="text-center">Made with ❤ by Piyush Bhatt</p>
+</div>
 
 </html>
